--- a/.classpath
+++ b/.classpath
@@ -3,54 +3,54 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/apache-mime4j-0.6.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/bsh-1.3.0.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/cglib-nodep-2.1_3.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/commons-codec-1.10.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/commons-exec-1.1.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/commons-io-2.2.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/commons-jxpath-1.3.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/commons-lang3-3.1.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/cssparser-0.9.11.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/guava-15.0.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/hamcrest-library-1.3.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/htmlunit-2.13.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/htmlunit-core-js-2.13.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/httpclient-4.3.1.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/httpcore-4.3.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/httpmime-4.3.1.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/ini4j-0.5.2.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/jcommander-1.29.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/jetty-websocket-8.1.8.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/jna-3.4.0.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/jna-platform-3.4.0.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/json-20080701.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/junit-4.12.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/mysql-connector.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/nekohtml-1.9.19.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/netty-3.5.7.Final.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/operadriver-1.5.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/phantomjsdriver-1.0.4.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/poi-3.14-20160307.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/poi-examples-3.14-20160307.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/poi-excelant-3.14-20160307.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/poi-ooxml-3.14-20160307.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/poi-ooxml-schemas-3.14-20160307.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/poi-scratchpad-3.14-20160307.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/protobuf-java-2.4.1.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/sac-1.3.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/selenium-java-2.38.0.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/selenium-java-2.38.0-srcs.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/selenium-server-standalone-2.53.1.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/serializer-2.7.1.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/testng-6.8.5.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/xalan-2.7.1.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/xercesImpl-2.10.0.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/xml-apis-1.4.01.jar"/>
-	<classpathentry kind="lib" path="E:/ADMIRAL/Automation/PolicyCenter/lib/xmlbeans-2.6.0.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/apache-mime4j-0.6.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/bsh-1.3.0.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/cglib-nodep-2.1_3.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/commons-exec-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/commons-io-2.2.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/commons-jxpath-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/commons-lang3-3.1.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/cssparser-0.9.11.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/guava-15.0.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/hamcrest-library-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/htmlunit-2.13.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/htmlunit-core-js-2.13.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/httpclient-4.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/httpcore-4.3.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/httpmime-4.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/ini4j-0.5.2.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/jcommander-1.29.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/jetty-websocket-8.1.8.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/jna-3.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/jna-platform-3.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/json-20080701.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/mysql-connector-java-8.0.20.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/nekohtml-1.9.19.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/netty-3.5.7.Final.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/operadriver-1.5.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/phantomjsdriver-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/poi-3.14-20160307.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/poi-examples-3.14-20160307.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/poi-excelant-3.14-20160307.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/poi-ooxml-3.14-20160307.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/poi-ooxml-schemas-3.14-20160307.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/poi-scratchpad-3.14-20160307.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/protobuf-java-2.4.1.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/sac-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/selenium-java-2.38.0.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/selenium-java-2.38.0-srcs.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/selenium-server-standalone-2.53.1.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/serializer-2.7.1.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/testng-6.8.5.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/xalan-2.7.1.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/xercesImpl-2.10.0.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/xml-apis-1.4.01.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/CSP/lib/xmlbeans-2.6.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
